--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/AddDistributor.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/AddDistributor.cshtml
@@ -1,4 +1,4 @@
-﻿@model BAL.User
+﻿@model Distributor.BusinessLogic.User
 @{
     ViewBag.Title = "AddDistributor";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
