--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/AdminMaster.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/AdminMaster.cshtml
@@ -1,4 +1,4 @@
-﻿@model BAL.AdminMaster
+﻿@model Distributor.BusinessLogic.AdminMaster
 @{
     ViewBag.Title = "AdminMaster";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
