--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/DistributorRecharge.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/DistributorRecharge.cshtml
@@ -1,4 +1,4 @@
-﻿@model BAL.RechargeTransaction
+﻿@model Distributor.BusinessLogic.RechargeTransaction
 @{
     ViewBag.Title = "Distributor Recharge";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
