--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/GetAdminList.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/GetAdminList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BAL.AdminMaster>
+﻿@model IEnumerable<Distributor.BusinessLogic.AdminMaster>
 @if (Model != null)
 {
     <table class="table striped hovered cell-hovered border bordered">
