--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/GetClientList.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/GetClientList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BAL.ClientMaster>
+﻿@model IEnumerable<Distributor.BusinessLogic.ClientMaster>
 @if (Model != null)
 {
     <table class="table striped hovered cell-hovered border bordered">
