--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/GetDistributorList.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/GetDistributorList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BAL.User>
+﻿@model IEnumerable<Distributor.BusinessLogic.User>
 @if (Model != null)
 {
     <table class="table striped hovered cell-hovered border bordered">
