--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/GetMenuList.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/GetMenuList.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<BAL.ClientMenuMaster>
+@model IEnumerable<Distributor.BusinessLogic.ClientMenuMaster>
 @if (Model != null)
 {
     <table class="table striped hovered cell-hovered border bordered">
