--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/RechargeHistory.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/RechargeHistory.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BAL.RechargeTransaction>
+﻿@model IEnumerable<Distributor.BusinessLogic.RechargeTransaction>
 @{
     ViewBag.Title = "RechargeHistory";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
