--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/RemoveClient.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/RemoveClient.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BAL.ClientMaster>
+﻿@model IEnumerable<Distributor.BusinessLogic.ClientMaster>
 @{
     ViewBag.Title = "RemoveClient";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
