--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Account/LogIn.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Account/LogIn.cshtml
@@ -1,4 +1,4 @@
-﻿@model BAL.User
+﻿@model Distributor.BusinessLogic.User
 @{
     ViewBag.Title = "LogIn";
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
