--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/DistributorRechargeInformationReport.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/DistributorRechargeInformationReport.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BAL.User>
+﻿@model IEnumerable<Distributor.BusinessLogic.User>
 @{
     ViewBag.Title = "Distributor Recharge Information";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
