--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/Index.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Dashboard/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
-    var CurrentUser = (BAL.User)Session["User"];
+    var CurrentUser = (Distributor.BusinessLogic.User)Session["User"];
 }
 <div class="row">
     <div class="col-md-12">
         <div class="tile-container bg-darkCobalt">
-            @if (CurrentUser.UserType == BAL.UserTypes.ADMIN)
+            @if (CurrentUser.UserType == Distributor.BusinessLogic.UserTypes.ADMIN)
             {
                 <div class="tile-wide bg-lighterBlue" data-role="tile">
                     <h2>
@@ -49,7 +49,7 @@
                     </h2>
                 </div>
             }
-            @if (CurrentUser.UserType == BAL.UserTypes.CLIENT)
+            @if (CurrentUser.UserType == Distributor.BusinessLogic.UserTypes.CLIENT)
             {
                 <div class="tile-wide bg-lighterBlue" data-role="tile">
                     <h2>
@@ -82,7 +82,7 @@
                     </h2>
                 </div>
             }
-            @if (CurrentUser.UserType == BAL.UserTypes.DISTRIBUTOR)
+            @if (CurrentUser.UserType == Distributor.BusinessLogic.UserTypes.DISTRIBUTOR)
             {
                 <div class="tile-wide bg-red" data-role="tile">
                     <h2>
