--- a/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Shared/DistributorRechargeRow.cshtml
+++ b/ExpertOrderManagement/ExpertDistributorApp/ExpertDistributorApp/Views/Shared/DistributorRechargeRow.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BAL.User>
+﻿@model IEnumerable<Distributor.BusinessLogic.User>
 @if (Model != null)
 {
     foreach (var row in Model)
