Added ClientMaster page and its design. Restructured User Login code so that only Client Users, Super Admin and Customers can login into System

--- a/ExpertOrderManagement/ExpertOrderManagement/Views/Account/Login.cshtml
+++ b/ExpertOrderManagement/ExpertOrderManagement/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model BusinessLogic.User
+﻿@model BusinessLogic.ClientUser
 @{
     ViewBag.Title = "Please Login here";
     Layout = "~/Views/Shared/_Account.cshtml";
