--- a/ExpertOrderManagement/ExpertOrderManagement/Views/Account/UpdateProfile.cshtml
+++ b/ExpertOrderManagement/ExpertOrderManagement/Views/Account/UpdateProfile.cshtml
@@ -1,4 +1,4 @@
-﻿@model BusinessLogic.User
+﻿@model BusinessLogic.ClientUser
 @{
     ViewBag.Title = "UpdateProfile";
     Layout = "~/Views/Shared/_Dashboard.cshtml";
